--- a/src/pages/pricing-page/pricing-page.html
+++ b/src/pages/pricing-page/pricing-page.html
@@ -1,1 +1,5 @@
-<p>pricing-page works!</p>
+<div>
+  <app-header></app-header>
+  <app-hero-cta-section [hero_section]="ps.pricing_cta_content.hero_section"></app-hero-cta-section>
+  <app-footer></app-footer>
+</div>
