--- a/src/pages/about-page/about-page.html
+++ b/src/pages/about-page/about-page.html
@@ -1,4 +1,129 @@
 <div>
   <app-header></app-header>
+
+  <!-- Hero Section -->
+  <section data-bs-version="5.1" class="header1 cid-uQgsj3s6IR" id="header01-33">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-8 image-wrapper">
+          <img class="w-100" [src]="abs.about_page_content.hero_section.image" alt="About Image" />
+        </div>
+        <div class="col-12 col-lg col-md-12">
+          <div class="text-wrapper align-left">
+            <h1 class="mbr-section-title mbr-fonts-style mb-4 display-2">
+              <strong>{{ abs.about_page_content.hero_section.title }}</strong>
+            </h1>
+            <p class="mbr-text mbr-fonts-style mb-4 display-7">{{ abs.about_page_content.hero_section.description }}</p>
+            <div class="mbr-section-btn mt-3">
+              <a class="btn btn-danger display-7" [href]="abs.about_page_content.hero_section.button_link">
+                {{ abs.about_page_content.hero_section.button_text }}
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Balanced Living Section with Form -->
+  <section data-bs-version="5.1" class="header8 cid-uQgsnBrFIu" id="header08-34">
+    <div class="container">
+      <div class="row content-wrapper justify-content-center">
+        <div class="col-lg-7 mbr-form">
+          <div class="text-wrapper align-left" data-form-type="formoid">
+            <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name">
+              <input type="hidden" name="email" data-form-email="true" value="" />
+              <div class="dragArea row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                  <h1 class="mbr-section-title mbr-fonts-style mb-4 display-1">
+                    <strong>{{ abs.about_page_content.balanced_living_section.title }}</strong>
+                  </h1>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                  <p class="mbr-text mbr-fonts-style mb-4 display-7">{{ abs.about_page_content.balanced_living_section.description }}</p>
+                </div>
+                <div data-for="email" class="col-lg-6 col-md-6 col-sm-12">
+                  <input type="email" name="email" placeholder="about@email.com" data-form-field="email" class="form-control display-7" id="email-header08-34" />
+                </div>
+                <div class="col-auto mbr-section-btn">
+                  <button type="submit" class="w-100 btn btn-black display-7">Submit</button>
+                </div>
+                <div class="row">
+                  <div hidden data-form-alert class="alert alert-success col-12">Thanks for filling out the form!</div>
+                  <div hidden data-form-alert-danger class="alert alert-danger col-12">Oops...! some problem!</div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="col-lg-5 col-12">
+          <div class="image-wrapper">
+            <img class="w-100" [src]="abs.about_page_content.balanced_living_section.image" alt="Yoga Image" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Counter Section -->
+  <section data-bs-version="5.1" class="counter1 counters cid-uQgsRnUFFw" id="counter1-35">
+    <div class="container">
+      <div class="row content-row mt-4">
+        <div
+          class="item features-without-image col-12 col-md-6 col-lg-4 item-mb"
+          *ngFor="let item of abs.about_page_content.counter_section"
+        >
+          <div class="item-wrapper">
+            <div class="title mb-3">
+              <h3 class="count-1 mbr-fonts-style display-1">{{ item.count }}</h3>
+            </div>
+            <h4 class="card-title mbr-fonts-style display-5">
+              <strong>{{ item.title }}</strong>
+            </h4>
+            <p class="mbr-text card-text mbr-fonts-style mb-0 display-7">{{ item.description }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Timeline Section -->
+  <section data-bs-version="5.1" class="timeline04 cid-uQgtizuoDL" id="timeline04-37">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="card col-md-12 col-lg-10">
+          <div class="card-wrapper">
+            <div class="row justify-content-center">
+              <div class="col-12 mb-5 content-head">
+                <h3 class="card-title mbr-fonts-style mbr-white mt-3 display-2">
+                  <strong>{{ abs.about_page_content.timeline_section.title }}</strong>
+                </h3>
+              </div>
+            </div>
+            <div class="card-box">
+              <div
+                class="row justify-content-center item features-without-image mb-5"
+                *ngFor="let event of abs.about_page_content.timeline_section.events; let i = index"
+                [class.active]="i === 0"
+              >
+                <div class="col-12 col-lg-2">
+                  <h5 class="mbr-card-title mbr-fonts-style mt-0 mb-3 display-7">{{ event.year }}</h5>
+                </div>
+                <div class="col-12 col-lg-4">
+                  <h6 class="mbr-card-subtitle mbr-fonts-style mt-0 mb-3 display-7">
+                    <strong>{{ event.subtitle }}</strong>
+                  </h6>
+                </div>
+                <div class="col-md-12 col-lg item-wrapper">
+                  <p class="mbr-text mbr-fonts-style mt-0 mb-0 display-7">{{ event.description }}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <app-footer></app-footer>
 </div>
