--- a/src/pages/blogs-page/blogs-page.html
+++ b/src/pages/blogs-page/blogs-page.html
@@ -1,4 +1,85 @@
 <div>
   <app-header></app-header>
+
+  <!-- Yoga Blog Section -->
+  <section data-bs-version="5.1" class="start article05 cid-uQgr302jRD" id="article05-2x">
+    <div class="container">
+      <div class="row justify-content-center align-items-center">
+        <div class="col-12">
+          <div class="card-wrapper">
+            <div class="row">
+              <div class="col-12 col-md-12 col-lg-5 image-wrapper">
+                <img class="w-100" [src]="bs.blogs_page_content.yoga_blog.image" [alt]="bs.blogs_page_content.yoga_blog.title" />
+              </div>
+              <div class="col-12 col-lg col-md-12">
+                <div class="text-wrapper align-left">
+                  <h1 class="mbr-section-title mbr-fonts-style mb-4 display-2">
+                    <strong>{{ bs.blogs_page_content.yoga_blog.title }}</strong>
+                  </h1>
+                  <p class="mbr-text mbr-fonts-style mb-4 display-7">{{ bs.blogs_page_content.yoga_blog.description }}</p>
+                  <div class="mbr-section-btn mt-3">
+                    <a class="btn btn-lg btn-black display-7" [href]="bs.blogs_page_content.yoga_blog.link">
+                      {{ bs.blogs_page_content.yoga_blog.buttonText }}
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Mindfulness Sections -->
+  <section data-bs-version="5.1" class="image02 cid-uQgr7vqHCu" id="image02-2y">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-lg-10">
+          <div class="row">
+            <div *ngFor="let items of bs.blogs_page_content.mindfulness_sections; let i = index" class="col-12 col-lg-5" [class.col-lg]="i !== 0">
+              <div class="img-item">
+                <img class="w-100 mb-4" [src]="items.image" alt="Yoga Image" />
+                <h5 class="mbr-fonts-style mb-3 display-5"><strong>{{ items.title }}</strong></h5>
+                <p class="mbr-text mbr-fonts-style mb-sm-5 display-7">{{ items.description }}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Yoga & Wellness News -->
+  <section data-bs-version="5.1" class="news08 cid-uQgrnWOFZU" id="news08-2z">
+    <div class="container">
+      <div class="row justify-content-center mb-5">
+        <div class="col-12 content-head">
+          <div class="mbr-section-head">
+            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
+              <strong>Yoga & Wellness News</strong>
+            </h4>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="item features-image col-12 col-md-6 col-lg-4" *ngFor="let item of bs.blogs_page_content.yoga_news_section">
+          <div class="item-wrapper">
+            <div class="item-img mb-3">
+              <img [src]="item.image" [alt]="item.title" />
+            </div>
+            <div class="item-content align-left">
+              <h5 class="item-title mbr-fonts-style mt-0 mb-3 display-7">{{ item.category }}</h5>
+              <h6 class="item-subtitle mbr-fonts-style mb-3 display-5"><strong>{{ item.title }}</strong></h6>
+              <div class="mbr-section-btn item-footer">
+                <a [href]="item.link" class="btn item-btn btn-white display-7">Read now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <app-footer></app-footer>
 </div>
