--- a/src/pages/contact-page/contact-page.html
+++ b/src/pages/contact-page/contact-page.html
@@ -1,4 +1,36 @@
 <div>
   <app-header></app-header>
+
+  <section data-bs-version="5.1" class="form03 cid-uQfF4gyCLL" id="form03-1t">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg item-wrapper">
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
+            <strong>{{ cs.contact_section.title }}</strong>
+          </h3>
+          <div class="col-lg-12 mx-auto mbr-form" data-form-type="formoid">
+            <form [attr.action]="cs.contact_section.form_action" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name">
+              <input type="hidden" name="email" data-form-email="true" value="" />
+              <div class="row">
+                <div hidden data-form-alert class="alert alert-success col-12">Thanks for filling out the form!</div>
+                <div hidden data-form-alert-danger class="alert alert-danger col-12">Oops...! some problem!</div>
+              </div>
+              <div class="dragArea row">
+                <input type="text" name="name" placeholder="{{ cs.contact_section.fields.name }}" data-form-field="name" class="form-control col-md col-sm-12 mb-3" id="name-form03-1t" />
+                <input type="email" name="email" placeholder="{{ cs.contact_section.fields.email }}" data-form-field="email" class="form-control col-md col-sm-12 mb-3" id="email-form03-1t" />
+                <input type="tel" name="phone" placeholder="{{ cs.contact_section.fields.phone }}" data-form-field="phone" class="form-control col-12 mb-3" id="phone-form03-1t" />
+                <textarea name="textarea" placeholder="{{ cs.contact_section.fields.message }}" data-form-field="textarea" class="form-control col-12 mb-3" id="textarea-form03-1t"></textarea>
+                <button type="submit" class="btn btn-primary display-7 col-lg-12 col-md-12 col-sm-12 align-center">{{ cs.contact_section.button_text }}</button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <img class="w-100" [src]="cs.contact_section.image" alt="Contact Us Image" />
+        </div>
+      </div>
+    </div>
+  </section>
+
   <app-footer></app-footer>
 </div>
